@@ -1,9 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX latencytop-0.5-01-mkdir-usr-sbin-as-well.patch 634 RMD160 e1f750b80c0490ec7fd8a0af5ba9a94d703e0fd5 SHA1 4559511dcda474de41fb181cbcfdca8bd8001bda SHA256 7ac7ded27f46e572753a82219cb8a46bd7948bbdc173bae8c85e43b2c40f7ee6
 AUX latencytop-0.5-03-clean-up-build-system.patch 2350 RMD160 0ce388b1bef8922a63f7b04abf8a246a61bab104 SHA1 010e33a8403c80a4ea4d4800d72827292ee9cc5a SHA256 fc39c4e2e7aede6dd7e677abed09a8e68ae4a4da5dd0d00be373795025d32cfb
 AUX latencytop-0.5-fsync-fix-implicit-decl.patch 692 RMD160 91323c174c0a22be8d9638b56747706bbd07894a SHA1 45a77534c541d9693bceceae61ebddbfbf8e0e50 SHA256 928e28df0dbc945bb92c456a19f588bc8d0db6e0cc2669a6a8cf0ba954352e86
 DIST latencytop-0.4.tar.gz 9606 RMD160 f2e84e03180e4b4471f6de2c4385545e709c4058 SHA1 4526ed5d86bc341a8abdb7fe17313f993c4d9f15 SHA256 4c5bb829390f266f6ba4430b725a4210d7e71d96168731dfd790c0f945c317b8
 DIST latencytop-0.5.tar.gz 25374 RMD160 759cdba9301d6effdb6dbc4c4cfa3fcba8e90a66 SHA1 cfd8a83fa40e630cf680d96a186ff4fdbf6f22c8 SHA256 9e7f72fbea7bd918e71212a1eabaad8488d2c602205d2e3c95d62cd57e9203ef
 EBUILD latencytop-0.4.ebuild 1300 RMD160 6d37f4ccaed929252e59a5d3e1c37c04648cf3d9 SHA1 424156e1fbc23db9d694463848e8449c2a470eb1 SHA256 268ff903da81cf123620bd2ce73294fdc1398a5d2b3165184df9740612c90407
-EBUILD latencytop-0.5.ebuild 837 RMD160 0a6fedd8f7a14c2ac2199cf9493e76c3efbfc9a2 SHA1 fe001cceec72af6f070d9d550769e720b3931d7d SHA256 2a0dccfc7df58c6ab65b898181b0fa172945dd5e8de9ea459c8c8a0507869eee
-MISC ChangeLog 1135 RMD160 b7c985a1bf871a598c8bde14b8af96681506cff6 SHA1 19b71456444a4b78d56203e985793324369ab7a3 SHA256 0b8c69cbcaef0641b97020391b551d2a24ae9b7c6775491c36fb266551845b66
+EBUILD latencytop-0.5.ebuild 884 RMD160 c20cc8255a20038bf22ab09e33ac9baf1ec325bb SHA1 8b93d263b1a6e579137d41f744664263fe0530c9 SHA256 bdddf2fc8f2ccad2e9f05ced9198c4d51991fffa7c5c0abee1f97f357d4e65de
+MISC ChangeLog 1265 RMD160 e6bbbae5d91cb9e0d0cdf749ee712405bbb78c3e SHA1 15e931d76d4ddaf0d3c495ec3743f8ad9c18b096 SHA256 8b3e8b34b8bafc70322a7cf117b105bf90d621500c39bd2c8f82009e6ccbf48f
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iF4EAREIAAYFAks5ok4ACgkQTwhj9JtAlp4A8gD/YvwIAk6ROTc4onERhQ7rWiLZ
+iI24b2DCKG+i4LytKd4BAJ0IkWOyL6vi0dWTWnhNlqE3SXbk66TTPhAqAWlm/d7s
+=brLi
+-----END PGP SIGNATURE-----
